syntax = "proto3";

package proto;

message String {
    string value = 1;
}

service HelloService {
    rpc Hello (String) returns (String);
    rpc GetUserInfo (String ) returns (User);
}

message User {
    string userName = 1;
    int32 accountType = 2;
}